[version 1.0.5] Added search and clear buttons and shortcuts. Fixed list highlighting. Optimized when search is executed.

--- a/extension/css/common.css
+++ b/extension/css/common.css
@@ -97,3 +97,17 @@ h2 {
   font-weight: bold;
   color: red;
 } */
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+.left-buttons {
+  display: flex;
+}
+.left-buttons button {
+  margin-right: 10px;
+}
+.button-right {
+  margin-left: auto;
+}
