--- a/extension/css/common.css
+++ b/extension/css/common.css
@@ -67,7 +67,7 @@ h2 {
 #wordCounter{
   /* padding: 0px 0px 5px; */
   right: 0px;
-  font-size: 16px;
+  /* font-size: 16px; */
   display: flex;
   flex-direction: column;
   border-color: transparent;
@@ -76,8 +76,9 @@ h2 {
   box-shadow: none;
   color: #707070;
   background-color: #ccc;
-  position: absolute; 
+  /* position: absolute;  */
   width: 2.5rem;
+  max-width: 2.5rem;
 }
 
 .line{
